# SkynetJARVIS

./: .env.example  .gitignore  README.md  install.bat  package-lock.json  package.json  start.bat  tsconfig.json
agents/local-agent/: pyproject.toml
agents/local-agent/app/: agent.py
apps/desktop/: package.json
apps/desktop/src/main/: main.js  preload.js
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx
apps/web/src/app/(app)/: layout.tsx  page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/documents/: page.tsx
apps/web/src/app/(app)/projects/: page.tsx
apps/web/src/app/(app)/settings/: page.tsx
apps/web/src/components/chat/: chat-input.tsx  chat-message.tsx
apps/web/src/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: utils.ts
apps/web/src/stores/: useAppStore.ts  useChatStore.ts
apps/web/src/styles/: globals.css
docs/: architecture.md  commands.md  roadmap.md  security.md
infra/docker/: Dockerfile.web  docker-compose.yml
mcp-servers/google/: server.py
mcp-servers/obsidian/: server.py
services/ai-orchestrator/: pyproject.toml
services/ai-orchestrator/app/: orchestrator.py
services/api/: pyproject.toml  requirements.txt
services/api/app/: main.py
services/api/app/core/: config.py  database.py  security.py
services/api/app/models/: __init__.py  agent.py  api_key.py  chat.py  connection.py  document.py  gem.py  memory.py  project.py  subscription.py  user.py
services/api/app/routes/: __init__.py  agent.py  auth.py  chat.py  documents.py  projects.py  settings.py
services/api/app/schemas/: __init__.py  agent.py  chat.py  document.py  project.py  user.py
services/mcp-gateway/: pyproject.toml
services/mcp-gateway/app/: gateway.py
(+1 files in other folders)
