[project]
name = "nexa-local-agent"
version = "0.1.0"
description = "Nexa AI Workspace - Local Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "psutil>=5.9.0",
]
