[project]
name = "nexa-ai-orchestrator"
version = "0.1.0"
description = "Nexa AI Workspace - AI Orchestrator Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "openai>=1.14.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.4.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]
